--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ ament_python_install_package(${PROJECT_NAME})
 # Install Python executables
 install(PROGRAMS
   scripts/rosActionServerMerger.py
+  scripts/attach_node.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
